- extensive testing for NaN-specials in C-code for the link functions
  is added. 
- details section added to clmm.control.Rd with comment about using
  "central" gradients with the ucminf optimizer.
- examples updated in confint.Rd

2012-01-19:

- Changed evaluation of formula in clm to make clm more forgiving for
  evaluation inside other functions.

2012-05-09:

- Updated evaluation of formula in clmm, cf. resent update of clm.

2012-05-22:

- Better evaluation of fitted probabilities. This should reduce the
  occurance of the "sqrt(phi2) : NaNs produced" error message.
- Improved evaluation of control parameters in clmm using the new
  function getCtrlArgs.
- Better warning if intercept is attempted removed in clmm.

2012-05-23:

- Adding useMatrix argument to clmm.control
- Using getFitted in clm
- Implementing getFittedC in C and updating C code for fit.clmm.ssr
  with better and faster evaluation of fitted values   
- Introduction of links.h, links.c and get_fitted.c in /src

2012-05-29:

- Correcting formula interpretation in clm to allow for really long
  formulas.
- Better evaluation of control arguments in clmm (adjustment of
  getCtrlAgs).
- Adding clmm.control.R to ./test

2012-09-10:
- Computing Newton step in clm with solve() rather than
  .Call("La_dgesv", ...) to accomodate changes in R base. 

2012-09-11:
- Using globalVariables() conditional on getRversion() >= '2.15.1'.

2013-03-20:
- Adding symmetric2 threshold function, which restricts the latent
  mean in the reference group to zero. This means that the central
  threshold (ylev even) is zero or that the two central thresholds
  are equal apart from their sign (ylev uneven).

2013-04-08:
- Allowing zero weights in clm unless there are no observations with a
  positive weight in one or more response categories.

2013-04-11:
- clm now computes Theta and alpha.mat tables of thresholds and
  threshold-parameters if nominal effects are specified.